--- a/src/components/AdCanvas/AdCanvas.css
+++ b/src/components/AdCanvas/AdCanvas.css
@@ -43,6 +43,15 @@
   justify-content: center;
   align-items: center;
 }
+.grid-cell[style*="grid-column: span"] {
+  width: calc(100% * var(--span));
+  max-width: 100%;
+}
+
+.grid-cell[style*="grid-row: span"] {
+  height: calc(100% * var(--span));
+  max-height: 100%;
+}
 .grid-cell.selectable {
   cursor: pointer;
 }
