style: border for camera + colour for heatmap to Orange-Red

--- a/src/index.css
+++ b/src/index.css
@@ -27,3 +27,9 @@ body {
 #webgazerVideoContainer {
   z-index: 1000;
 }
+
+#webgazerVideoFeed {
+  border: 2.5px solid grey;
+  border-radius: 1rem;
+  background: grey;
+}
